objects/ITB_Activity__c.object
<CustomObject>
    <description>Activities associated with ITB WON</description>
    <fields>
        <fullName>ActivityLink__c</fullName>
        <formula>IF( NOT( ISBLANK( TECH_ActivityReferenceID__c ) ) , HYPERLINK( $Label.CLMAY13CCC27 + $Label.CLMAY13CCC31 + TECH_ActivityReferenceID__c + $Label.CLMAY13CCC36 , &apos;Link to Activity in Intouch&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityNum__c</fullName>
        <formula>HYPERLINK($Label.CL10071 +&apos;/&apos; + Id ,  LegacyActivityNumber__c  , &apos;_parent&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualEnd__c</fullName>
        <label>Actual End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ActualStart__c</fullName>
        <label>Actual Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description from InTouch system</description>
        <label>Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyActivityNumber__c</fullName>
        <label>Activity #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <description>Owner of Activities from InTouch system</description>
        <label>Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlannedEnd__c</fullName>
        <label>Planned End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PlannedStart__c</fullName>
        <label>Planned Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RMANumber__c</fullName>
        <description>RMA Number from InTouch system</description>
        <label>RMA #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceRegion__c</fullName>
        <description>ServiceRegion from InTouch system</description>
        <label>Service Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Ststus of ITB WON</description>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_ActivityReferenceID__c</fullName>
        <label>TECH_ActivityReferenceID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_LegacyLastUpdateDate__c</fullName>
        <label>TECH_LegacyLastUpdateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TECH_UniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>TECH_UniqueID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>WON Type from InTouch system</description>
        <label>Type</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderNotification__c</fullName>
        <label>Work Order Notification</label>
        <referenceTo>WorkOrderNotification__c</referenceTo>
        <relationshipName>WorkOrderNotifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ITB Activity</label>
    <nameField>
        <displayFormat>ACT-{0000}</displayFormat>
        <label>bFO Activity #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ITB Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>